--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Tundra Gallery</title>
+    <title>ASACB</title>
     <meta charset="utf-8"/>
     <link href='https://fonts.googleapis.com/css?family=Lato:400,300,100,700,900' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="Kory-McLean.github.io/css/main.css">
@@ -8,36 +8,42 @@
 
 <body>
     <header>
-      <h1 class="page-title">TUNDRA GALLERY</h1>
-      <p class="page-description">The Tundra Gallery is a collection of photographs from three distinct areas: arctic tundra, alpine tundra, and antarctic tundra. In tundra, the vegetation is composed of dwarf shrubs, sedges and grasses, mosses, and lichens, making for diverse ecology and stunning photos. </p>
+      <h1 class="page-title">As Sweet As Can Be</h1>
+      <p class="page-description">Welcome to the source of your new favorite breakfast spread and mouth watering marinades or dipping sauces. Whatever your taste buds need, Linda is the source for it all. From charmingly sweet to a warming spice, Linda's locally sourced and produced jellies, jams and sauces chas it all without the gimmicks and non-sense.</p>
     </header>
 
     <div class="gallery">
       <figure class="gallery-item">
         <img class="thumbnail" src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-3/moss1.jpg">
+          <p>Manjo Jam</p>
       </figure>
       <figure class="gallery-item">
         <img class="thumbnail" src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-3/moss2.jpg">
+          <p>Pepper Jelly</p>
       </figure>
       <figure class="gallery-item">
         <img class="thumbnail" src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-3/moss3.jpg">
+          <p>Sweet and Spicy Barbeque Sauce</p>
       </figure>
       <figure class="gallery-item">
         <img class="thumbnail" src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-3/moss4.jpg">
+          <p>Spicy Pepper Sauce</p>
       </figure>
       <figure class="gallery-item">
         <img class="thumbnail" src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-3/moss5.jpg">
+          <p>Peppermint Candies</p>
       </figure>
       <figure class="gallery-item">
         <img class="thumbnail" src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-3/moss6.jpg">
+          <p>Local Produce</p>
       </figure>
     </div>
 
       <nav>
       <ul>
-        <li><a href="#"><b>Arctic</b></a></li>
-        <li><a href="#">Alpine</a></li>
-        <li><a href="#">Antarctic</a></li>
+        <li><a href="#"><b>About ASACB</b></a></li>
+        <li><a href="#">Products</a></li>
+        <li><a href="#">Where to find me!</a></li>
       </ul>
       <div class="contact-btn"><a>Contact</a>
       </div>
