--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>ASACB</title>
+    <title>Linda's Pepper Jelly</title>
     <meta charset="utf-8"/>
     <link href='https://fonts.googleapis.com/css?family=Lato:400,300,100,700,900' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="Kory-McLean.github.io/css/main.css">
@@ -8,7 +8,7 @@
 
 <body>
     <header>
-      <h1 class="page-title">As Sweet As Can Be</h1>
+      <h1 class="page-title">Linda's Pepper Jelly</h1>
       <p class="page-description">Welcome to the source of your new favorite breakfast spread and mouth watering marinades or dipping sauces. Whatever your taste buds need, Linda is the source for it all. From charmingly sweet to a warming spice, Linda's locally sourced and produced jellies, jams and sauces chas it all without the gimmicks and non-sense.</p>
     </header>
 
