--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <meta charset="utf-8"/>
-    <link href='https://fonts.googleapis.com/css?family=Lato:400,300,100,700,900' rel='stylesheet' type='text/css'>
+    <!--<link href='https://fonts.googleapis.com/css?family=Lato:400,300,100,700,900' rel='stylesheet' type='text/css'>-->
+    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet" type='text/css'>
     <link rel="stylesheet" type="text/css" href="Kory-McLean.github.io/css/main.css">
 
     <title>Linda's Pepper Jelly</title>
