--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <p>Manjo Jam</p>
       </figure>
       <figure class="gallery-item">
-        <img class="thumbnail" src="http://4.bp.blogspot.com/-KYHgEyFM3gM/UrPC74VdzRI/AAAAAAAAM-A/PEbA3qyR5Z0/s1600/DSCN2561.JPG">
+        <a href="PJ.HTML"><img class="thumbnail" src="http://4.bp.blogspot.com/-KYHgEyFM3gM/UrPC74VdzRI/AAAAAAAAM-A/PEbA3qyR5Z0/s1600/DSCN2561.JPG"></a>
           <p>Pepper Jelly</p>
       </figure>
       <figure class="gallery-item">
