--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
         <li><a href="#"><b>About Linda's</b></a></li>
         <li><a href="#">Products</a></li>
         <li><a href="#">Where to find me!</a></li>
+        <li><a href="#">Order</a></li>
+        <li><a href="#">Home</a></li>
       </ul>
       <div class="contact-btn"><a>Contact</a>
       </div>
