--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
       <nav>
       <ul>
-        <li><a href="#"><b>About Linda's</b></a></li>
+        <li><a href="about.HTML"><b>About Linda's</b></a></li>
         <li><a href="#">Products</a></li>
         <li><a href="#">Where to find me!</a></li>
         <li><a href="#">Order</a></li>
