--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <li><a href="#">Products</a></li>
         <li><a href="#">Where to find me!</a></li>
         <li><a href="#">Order</a></li>
-        <li><a href="#">Home</a></li>
+        <li><a href="index.html">Home</a></li>
       </ul>
       <div class="contact-btn"><a>Contact</a>
       </div>
