--- a/MJ.HTML
+++ b/MJ.HTML
@@ -18,11 +18,11 @@
       </div>
       <nav>
       <ul>
-        <li><a href="#"><b>About Linda's</b></a></li>
+      <li><a href="about.HTML"><b>About Linda's</b></a></li>
         <li><a href="#">Products</a></li>
         <li><a href="#">Where to find me!</a></li>
         <li><a href="#">Order</a></li>
-        <li><a href="#">Home</a></li>
+        <li><a href="index.html">Home</a></li>
       </ul>
       <div class="contact-btn"><a>Contact</a>
       </div>
