--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <ul>
           <li><a href="about.HTML"><b>About Linda's</b></a></li>
         <li><a href="#">Where to find me!</a></li>
-        <li><a href="#">Order</a></li>
+        <li><a href="https://form.jotform.us/71484682211152">Order</a></li>
         <li><a href="index.html">Home</a></li>
       </ul>
       <div class="contact-btn"><a>Contact</a>
