--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <li><a href="https://form.jotform.us/71484682211152">Order</a></li>
         <li><a href="index.html">Home</a></li>
       </ul>
-      <div class="contact-btn"><a>Contact</a>
+      <div class="contact-btn"><a href="contact.HTML">Contact</a>
       </div>
     </nav>
   </body>
