--- a/find.html
+++ b/find.html
@@ -16,14 +16,14 @@
         <a href="https://www.google.com/maps/place/Farmers+Market,+Huldah+Ave,+George+Town,+Cayman+Islands/@19.2888636,-81.3732059,721m/data=!3m1!1e3!4m8!1m2!2m1!1sMap+of+cayman!3m4!1s0x8f2586662c765cdb:0x4a101d50ca77cea5!8m2!3d19.2898854!4d-81.3733667"><img class="thumbnail" src="https://lh3.googleusercontent.com/MOf9Kxxkj7GvyZlTZOnUzuYv0JAweEhlxJX6gslQvbvlhLK5_bSTK6duxY2xfbBsj43H=w300"></a>
       </figure>
       </div>
-      <nav>
+        <nav>
       <ul>
           <li><a href="about.HTML"><b>About Linda's</b></a></li>
         <li><a href="#">Where to find me!</a></li>
-        <li><a href="#">Order</a></li>
+        <li><a href="https://form.jotform.us/71484682211152">Order</a></li>
         <li><a href="index.html">Home</a></li>
       </ul>
-      <div class="contact-btn"><a>Contact</a>
+      <div class="contact-btn"><a href="contact.HTML">Contact</a>
       </div>
     </nav>
   </body>
