--- a/find.html
+++ b/find.html
@@ -19,7 +19,7 @@
         <nav>
       <ul>
           <li><a href="about.HTML"><b>About Linda's</b></a></li>
-        <li><a href="#">Where to find me!</a></li>
+        <li><a href="find.html">Where to find me!</a></li>
         <li><a href="https://form.jotform.us/71484682211152">Order</a></li>
         <li><a href="index.html">Home</a></li>
       </ul>
