--- a/Pep.html
+++ b/Pep.html
@@ -2,7 +2,7 @@
     <meta charset="utf-8"/>
     <!--<link href='https://fonts.googleapis.com/css?family=Lato:400,300,100,700,900' rel='stylesheet' type='text/css'>-->
     <link href="C:\Users\KQM\Downloads\fonts\Satisfy">
-    <link rel="stylesheet" type="text/css" href="Kory-McLean.github.io/css/Pep.css">    
+    <link rel="stylesheet" type="text/css" href="lindaspepperjelly.github.io/css/Pep.css">    
     <title>Linda's Pepper Jelly</title>
 
 <body>
