--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
       <h1 class="page-title">Linda's Pepper Jelly</h1>
-      <p class="page-description">Welcome to the source of your new favorite breakfast spread and mouth watering marinades or dipping sauces. Whatever your taste buds need, Linda is the source for it all. From charmingly sweet to a warming spice, Linda's locally sourced and produced jellies, jams and sauces chas it all without the gimmicks and non-sense.</p>
+      <p class="page-description">Welcome to the source of your new favorite breakfast spread and mouth watering marinades or dipping sauces. Whatever your taste buds need, Linda is the source for it all. From charmingly sweet to a warming spice, Linda's locally sourced and produced jellies, jams and sauces has it all without the gimmicks and non-sense.</p>
     </header>
 
     <div class="gallery">
@@ -36,7 +36,7 @@
 
       <nav>
       <ul>
-          <li><a href="about.HTML"><b>About Linda's</b></a></li>
+          <li><a href="about.HTML"><b>About Linda</b></a></li>
         <li><a href="find.html">Where to find me!</a></li>
         <li><a href="https://form.jotform.us/71484682211152">Order</a></li>
         <li><a href="index.html">Home</a></li>
