--- a/MJ.HTML
+++ b/MJ.HTML
@@ -18,7 +18,7 @@
       </div>
         <nav>
       <ul>
-          <li><a href="about.HTML"><b>About Linda's</b></a></li>
+          <li><a href="about.HTML"><b>About Linda</b></a></li>
         <li><a href="find.html">Where to find me!</a></li>
         <li><a href="https://form.jotform.us/71484682211152">Order</a></li>
         <li><a href="index.html">Home</a></li>
