--- a/SPS.HTML
+++ b/SPS.HTML
@@ -20,7 +20,7 @@
       <ul>
           <li><a href="about.HTML"><b>About Linda</b></a></li>
         <li><a href="find.html">Where to find me!</a></li>
-        <li><a href="https://form.jotform.us/71484682211152">Order</a></li>
+        <li><a href="order.html">Order</a></li>
         <li><a href="index.html">Home</a></li>
       </ul>
       <div class="contact-btn"><a href="contact.HTML">Contact</a>
