--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <li><a href="find.html">Where to find me!</a></li>
         <li><a href="order.html">Order</a></li>
         <li><a href="index.html">Home</a></li>
+         <li><a href="feedback.html">Feedback</a></li>
       </ul>
       <div class="contact-btn"><a href="contact.HTML">Contact</a>
       </div>
