--- a/feedback.html
+++ b/feedback.html
@@ -13,7 +13,7 @@
 
     <div class="gallery">
       <figure class="gallery-item">
-        <script type="text/javascript" src="https://form.jotform.us/jsform.us/jsform/7149456411157"></script>
+        <script type="text/javascript" src="https://form.jotform.us/jsform/71494564711157"></script>
       </figure>
       </div>
         <nav>
