--- a/about.HTML
+++ b/about.HTML
@@ -14,7 +14,7 @@
 
     <div class="gallery">
       <figure class="gallery-item">
-        <img class="thumbnail" src="http://www.gov.ky/portal/pls/portal/docs/1/3093370.JPG">
+        <img class="thumbnail" src="lindaspepperjelly.github.io/IMG_0536_MOMMOM_STALL.jpg">
       </figure>
       </div>
         <nav>
