--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <p>Mango Jam</p>
       </figure>
       <figure class="gallery-item">
-        <a href="PJ.HTML"><img class="thumbnail" src="http://4.bp.blogspot.com/-KYHgEyFM3gM/UrPC74VdzRI/AAAAAAAAM-A/PEbA3qyR5Z0/s1600/DSCN2561.JPG"></a>
+        <a href="PJ.HTML"><img class="thumbnail" src="lindaspepperjelly.github.io/IMG_0535_PEPPER_JELLY.JPG"></a>
           <p>Pepper Jelly</p>
       </figure>
       <figure class="gallery-item">
