--- a/PJ.HTML
+++ b/PJ.HTML
@@ -13,7 +13,7 @@
 
     <div class="gallery">
       <figure class="gallery-item">
-        <img class="thumbnail" src="http://4.bp.blogspot.com/-KYHgEyFM3gM/UrPC74VdzRI/AAAAAAAAM-A/PEbA3qyR5Z0/s1600/DSCN2561.JPG">
+        <img class="thumbnail" src="lindaspepperjelly.github.io/IMG_0535_PEPPER_JELLY.JPG">
       </figure>
       </div>
        <nav>
