--- a/contact.HTML
+++ b/contact.HTML
@@ -19,10 +19,10 @@
       </div>
         <nav>
       <ul>
-          <li><a href="about.HTML"><b>About Linda</b></a></li>
+          <li><a href="index.html"><b>Home</b></a></li>
+          <li><a href="about.HTML">About Linda</a></li>
         <li><a href="find.html">Where to find me!</a></li>
-        <li><a href="order.html">Order</a></li>
-        <li><a href="index.html">Home</a></li>
+          <li><a href="order.html">Order</a></li>
          <li><a href="feedback.html">Feedback</a></li>
       </ul>
       <div class="contact-btn"><a href="contact.HTML">Contact</a>
