about me section added

--- a/about.HTML
+++ b/about.HTML
@@ -9,7 +9,7 @@
 <body>
     <header>
       <h1 class="page-title">About Linda</h1>
-      <p class="page-description">Text Description.</p>
+      <p class="page-description">After 42 years in the Civil Service and retiring in December 2015, I decided to expand my hobby and talent of making locally sourced and homemade goods into a business. Starting from humble beginings of making and selling pepper jelly for multiple food fairs within Cayman, I have played my hand into the vending of Spicy Pepper Sauce, Sweet and Spicy BBQ Sauce, my seasonal treat of Mango Jam and Peppermint candies. All ingredients in my products are all purchased right here in Cayman and are produced within our very own shores. I pledged to deliver high quality products all with my own personal flair and love. With treats to make a vacation, wedding, family-gathering or business conference unforgettable. Your next memorable gift or your new favourtie treat can all be found in one spot, at Linda's Pepper Jelly.</p>
     </header>
 
     <div class="gallery">
