--- a/PJ.HTML
+++ b/PJ.HTML
@@ -8,7 +8,7 @@
 <body>
     <header>
       <h1 class="page-title">Pepper Jelly</h1>
-      <p class="page-description">Text Description.</p>
+      <p class="page-description">As sweet as honey with a little kick sure to tantilize your taste buds, my pepper jelly is sure to be a crowd pleaser, if you don't eat the whole jar yourself. Made with local scotch bonnet peppers this treat is the origin of my business and my most popular product. Known for its beautiful color which can only be compared to a sunset on our esteemed beaches, my pepper jelly is the result of innovation on a well known Caymanian tradition. If you're not yet convinced, swing by my stall at the <a href="find.html" >Farmer's Market</a> for a taste.</p>
     </header>
 
     <div class="gallery">
