--- a/MJ.HTML
+++ b/MJ.HTML
@@ -8,7 +8,7 @@
 <body>
     <header>
       <h1 class="page-title">Mango Jam</h1>
-      <p class="page-description">Text Description.</p>
+      <p class="page-description">Your favorite seasonal treat just got alittle sweeter with Linda's mango jam. Made from sun kissed hand picked  mangoes this sweet delight will make any snack or desert special. Passed down from older generations my mango jam is a sweet and tangy spread that pairs perfectly with your morning cup of coffee or your evening tea. Availible only when in season to insure that the ingreadients are at their freshest order online or stop by the <a href="find.html">Farmer's Market</a> to purchase.</p>
     </header>
 
     <div class="gallery">
