--- a/Pep.html
+++ b/Pep.html
@@ -8,7 +8,7 @@
 <body>
     <header>
       <h1 class="page-title">Peppermint Candies</h1>
-      <p class="page-description">Text Description.</p>
+      <p class="page-description">A Caymanian tradition of handmaking this popular sweet, our Peppermint Candies are made by a business partner and friend. Wrapped in a plastic bag for a convinient sweet sure to please all who taste. Order online or pick up your families new favorite candy at the<a href="find.html">Farmer's Market</a>.</p>
     </header>
 
     <div class="gallery">
