--- a/SPS.HTML
+++ b/SPS.HTML
@@ -8,7 +8,7 @@
 <body>
     <header>
       <h1 class="page-title">Spicy Pepper Sauce</h1>
-      <p class="page-description">Text Description.</p>
+      <p class="page-description">A Caymanian tradition loved by many generations, Pepper jars can be seen in any Caymanian home. Our Spicy Pepper Sauce is a bundle of flavors, made using the traditional methods of pickleing peppers, onions and various other spices and ingredients these jars only get better with time. Whether you only add a little or alot this sauce is known to spice up any meal. Order online or visit me at the <a href="find.html">Farmer's Market</a> to purchase your very own jar of my personal twist on this Caymanian classic.</p>
     </header>
 
     <div class="gallery">
