--- a/SSBBQS.HTML
+++ b/SSBBQS.HTML
@@ -8,7 +8,7 @@
 <body>
     <header>
       <h1 class="page-title">Sweet and Spicy Barbeque Sauce</h1>
-      <p class="page-description">Text Description.</p>
+      <p class="page-description">The product of a spontaneous moment of inspiration my Sweet and Spicy Barbeque sauce is sure to become your new favourite dipping sauce or marinade. A flavor combination discovered out of the desire for the perfect barbeque sauce, this product is sure to start conversations at your next barbeque. Great with ribs, chicken or anything you can slather and grill, my barbeque sauce certainly deserves a spot in your cupboard. To get your hands on this hot commodity order online or find me at the <a href="find.html">Farmer's Market</a> to purchase your very own jar.</p>
     </header>
 
     <div class="gallery">
